# Daisy

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: DaisyConfig.cmake
examples/: CMakeLists.txt
examples/All/: CMakeLists.txt  main.cpp
examples/Callbacks/: CMakeLists.txt  main.cpp
examples/Input/: CMakeLists.txt  main.cpp
examples/Output/: CMakeLists.txt  main.cpp
include/Daisy/: Assert.hpp  Atomic.hpp  BitFlags.hpp  ControllerInput.hpp  ControllerOutput.hpp  Crc32.hpp  Daisy.hpp  Handle.hpp  Report.hpp  Result.hpp  Vec.hpp
include/Daisy/windows/: RAIIHandle.hpp  WindowsFwd.hpp  WindowsManager.hpp
src/: Assert.cpp  ControllerOutput.cpp  Crc32.cpp  Daisy.cpp  Thing.cpp
src/windows/: RAIIHandle.cpp  WindowsManager.cpp
